wip country nerd

--- a/app/scss/partials/_game-card.scss
+++ b/app/scss/partials/_game-card.scss
@@ -5,8 +5,12 @@
 	justify-content: space-between;
 	gap: 2rem;
 	padding: 2rem;
-	width: 15rem;
+	width: 70%;
 	max-width: 100%;
+
+	@media (min-width: 768px) {
+		width: 15rem;
+	}
 
 	&::before {
 		content: '';
