--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -32,3 +32,14 @@ body {
 		display: flex;
 	}
 }
+
+.hidden {
+	opacity: 0;
+	pointer-events: none;
+	transition: opacity 0.4s ease;
+
+	&.show {
+		opacity: 1;
+		pointer-events: initial;
+	}
+}
