--- a/app/scss/pages/_country-nerd.scss
+++ b/app/scss/pages/_country-nerd.scss
@@ -1,7 +1,8 @@
 .page.country-nerd {
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
+	height: 100%;
 
 	.letters {
 		display: flex;
@@ -10,33 +11,146 @@
 		gap: 0.6rem;
 		max-width: 50rem;
 
+		&.hide {
+			.letter {
+				opacity: 0;
+			}
+		}
+
 		.letter {
-			height: 4rem;
-			width: 4rem;
-			border-radius: 0.4rem;
-			background-color: white;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			cursor: pointer;
 
-			color: black;
-			font-size: 2rem;
-			font-family: $font-alt;
-
-			box-shadow: 2px 2px 5px 4px rgba(0, 0, 0, 0.25);
-
-			transition: transform 0.2s ease, box-shadow 0.2s ease;
-			will-change: transform;
-
-			&:hover {
-				transform: translate(0.05rem, 0.05rem);
-				box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.15);
+			&:nth-child(1) {
+				transition: opacity 0.2s ease 0.1s;
 			}
 
-			&.completed {
-				background: radial-gradient(43.04% 43.04% at 67.68% 35.44%, #F3CC3F 0%, #FFE600 0.01%, #FFCB46 85.94%);
+			&:nth-child(2) {
+				transition: opacity 0.2s ease 0.2s;
 			}
+
+			&:nth-child(3) {
+				transition: opacity 0.2s ease 0.11s;
+			}
+
+			&:nth-child(4) {
+				transition: opacity 0.2s ease 0.3s;
+			}
+
+			&:nth-child(5) {
+				transition: opacity 0.2s ease 0.18s;
+			}
+
+			&:nth-child(6) {
+				transition: opacity 0.2s ease 0.13s;
+			}
+
+			&:nth-child(7) {
+				transition: opacity 0.2s ease 0.21s;
+			}
+
+			&:nth-child(8) {
+				transition: opacity 0.2s ease 0.05s;
+			}
+
+			&:nth-child(9) {
+				transition: opacity 0.2s ease 0.35s;
+			}
+
+			&:nth-child(10) {
+				transition: opacity 0.2s ease 0.4s;
+			}
+
+			&:nth-child(11) {
+				transition: opacity 0.2s ease 0.22s;
+			}
+
+			&:nth-child(12) {
+				transition: opacity 0.2s ease 0.17s;
+			}
+
+			&:nth-child(13) {
+				transition: opacity 0.2s ease 0.03s;
+			}
+
+			&:nth-child(14) {
+				transition: opacity 0.2s ease 0.09s;
+			}
+
+			&:nth-child(15) {
+				transition: opacity 0.2s ease 0.11s;
+			}
+
+			&:nth-child(16) {
+				transition: opacity 0.2s ease 0.4s;
+			}
+
+			&:nth-child(17) {
+				transition: opacity 0.2s ease 0.35s;
+			}
+
+			&:nth-child(18) {
+				transition: opacity 0.2s ease 0.31s;
+			}
+
+			&:nth-child(19) {
+				transition: opacity 0.2s ease 0.2s;
+			}
+
+			&:nth-child(20) {
+				transition: opacity 0.2s ease 0.14s;
+			}
+
+			&:nth-child(21) {
+				transition: opacity 0.2s ease 0.25s;
+			}
+
+			&:nth-child(22) {
+				transition: opacity 0.2s ease 0.06s;
+			}
+
+			&:nth-child(23) {
+				transition: opacity 0.2s ease 0.17s;
+			}
+
+			&:nth-child(24) {
+				transition: opacity 0.2s ease 0.24s;
+			}
+
+			&:nth-child(25) {
+				transition: opacity 0.2s ease 0.36s;
+			}
+
+			&:nth-child(26) {
+				transition: opacity 0.2s ease 0.37s;
+			}
+		}
+	}
+
+	.letter {
+		height: 4rem;
+		width: 4rem;
+		border-radius: 0.4rem;
+		background-color: white;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+
+		color: black;
+		font-size: 2rem;
+		font-family: $font-alt;
+
+		box-shadow: 2px 2px 5px 4px rgba(0, 0, 0, 0.25);
+
+		transition: transform 0.2s ease, box-shadow 0.2s ease;
+		will-change: transform;
+
+		&:hover {
+			transform: translate(0.05rem, 0.05rem);
+			box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.15);
+		}
+
+		&.completed {
+			background: radial-gradient(43.04% 43.04% at 67.68% 35.44%, #F3CC3F 0%, #FFE600 0.01%, #FFCB46 85.94%);
 		}
 	}
 
@@ -47,8 +161,6 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			display: flex;
-			gap: 1.5rem;
 			opacity: 0;
 			pointer-events: none;
 
@@ -56,12 +168,70 @@
 			font-size: 2.5rem;
 			font-weight: 400;
 			letter-spacing: 0.04em;
+			white-space: nowrap;
+			line-height: 1.3em;
 		}
 
 		.letter-placeholder {
-			height: 4rem;
-			width: 4rem;
-			transform: translateY(-1rem);
+			height: 2.5rem;
+			width: 2.5rem;
+			display: inline-flex;
+			transform: translate(0.1em, -0.2em);
+		}
+	}
+
+	.answer-container {
+		display: none;
+		opacity: 0;
+		flex-direction: column;
+		gap: 2rem;
+	}
+
+	.input-container {
+		display: flex;
+		gap: 1rem;
+	}
+
+	.answer-input {
+		padding: 0 2rem;
+		border: none;
+		outline: none;
+		border-radius: 1000px;
+		font-size: 2rem;
+		text-transform: uppercase;
+		height: 4rem;
+	}
+
+	.validate-input {
+		height: 4rem;
+		width: 6rem;
+		border-radius: 1000px;
+		background-color: white;
+		border: none;
+		outline: none;
+		font-size: 1.8rem;
+		font-weight: 700;
+		cursor: pointer;
+	}
+
+	.answers {
+		display: flex;
+		flex-direction: column;
+		gap: 2rem;
+		margin-top: 2rem;
+
+		.answer {
+			padding: 0.5rem;
+			border-bottom: 1px solid white;
+			min-width: 15rem;
+			font-size: 1.5rem;
+			text-transform: uppercase;
+
+			&.valid {
+				&::after {
+					content: "✓";
+				}
+			}
 		}
 	}
 }
