wip country + start flags

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,6 +1,7 @@
 $color-blue: #402DB3;
 $color-blue-darker: darken($color-blue, 20);
 $color-red: #F05050;
+$color-green: #1dd710;
 $font-base: Roboto;
 $font-alt: Bangers;
 $base-font-size: clamp(14px, calc(11px + 0.35vw), 50px);
