--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -5,8 +5,10 @@
 
 @import "pages/home";
 @import "pages/country-nerd";
+@import "pages/flag-nerd";
 
 @import "partials/buttons";
+@import "partials/flag";
 @import "partials/footer";
 @import "partials/game-card";
 @import "partials/header";
