--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -18,11 +18,16 @@ body {
 	flex-direction: column;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 .pages {
 	display: flex;
 	flex: 1;
 	flex-direction: column;
 	justify-content: center;
+	padding: 0 2rem;
 }
 
 .page {
@@ -34,12 +39,12 @@ body {
 }
 
 .hidden {
-	opacity: 0;
+	display: none;
 	pointer-events: none;
 	transition: opacity 0.4s ease;
 
 	&.show {
-		opacity: 1;
+		display: block;
 		pointer-events: initial;
 	}
 }
