--- a/app/scss/pages/_country-nerd.scss
+++ b/app/scss/pages/_country-nerd.scss
@@ -3,13 +3,18 @@
 	justify-content: flex-start;
 	align-items: center;
 	height: 100%;
+	@media (min-width: 768px) {
+		justify-content: center;
+	}
 
 	.letters {
 		display: flex;
 		justify-content: center;
 		flex-wrap: wrap;
 		gap: 0.6rem;
-		max-width: 45rem;
+		@media (min-width: 768px) {
+			max-width: 45rem;
+		}
 
 		&.hide {
 			.letter {
@@ -157,6 +162,10 @@
 	.title-container {
 		position: relative;
 
+		@media (max-width: 767px) {
+			width: 100%;
+		}
+
 		.game-title {
 			position: absolute;
 			top: 0;
@@ -187,6 +196,12 @@
 		align-items: center;
 		gap: 2rem;
 		width: 100%;
+
+		&.win {
+			.tip {
+				background-color: $color-green;
+			}
+		}
 	}
 
 	.input-container {
@@ -203,7 +218,7 @@
 		font-size: 2rem;
 		text-transform: uppercase;
 		height: 4rem;
-		max-width: 40%;
+		width: 100%;
 		@media (min-width: 768px) {
 			max-width: 30rem;
 		}
@@ -226,21 +241,29 @@
 		flex-direction: column;
 		align-items: center;
 		gap: 2rem;
-		margin-top: 2rem;
 		width: 100%;
 
 		.answer {
 			position: relative;
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: flex-end;
+			align-items: center;
+			gap: 1rem;
 			padding: 0.5rem;
 			border-bottom: 1px solid white;
 			width: 100%;
 			min-width: 15rem;
-			max-width: 80%;
+			max-width: 100%;
 			@media (min-width: 768px) {
 				max-width: 25rem;
 			}
 			font-size: 1.5rem;
 			text-transform: uppercase;
+
+			.flag {
+				transform: translateY(1px);
+			}
 
 			&.valid {
 				&::after {
@@ -268,5 +291,15 @@
 		font-size: 0.7rem;
 		font-weight: 700;
 		text-transform: uppercase;
+	}
+
+	.won-link {
+		&:before {
+		}
+
+		&:after {
+			height: 60rem;
+			width: 60rem;
+		}
 	}
 }
