--- a/app/scss/_titles.scss
+++ b/app/scss/_titles.scss
@@ -1,15 +1,15 @@
 h1 {
 	font-family: $font-alt;
 	font-size: 2.5rem;
-	font-weight: 400;
-	letter-spacing: 0.04em;
+	font-weight: 700;
 	margin-bottom: 2em;
 	text-align: center;
+	line-height: 1.1em;
 }
 
 h2 {
 	font-family: $font-alt;
 	font-size: 1.8rem;
-	letter-spacing: 0.05em;
-	font-weight: 400;
+	font-weight: 700;
+	line-height: 1.1em;
 }
