--- a/app/scss/partials/_buttons.scss
+++ b/app/scss/partials/_buttons.scss
@@ -9,9 +9,10 @@
 
 	border-radius: 1000px;
 
+	font-family: $font-alt;
 	text-align: center;
 	text-decoration: none;
-	font-weight: 700;
+	font-weight: 900;
 	text-transform: uppercase;
 
 	box-shadow: 0.5rem 0.5rem 3rem 1rem rgba(0, 0, 0, 0.19);
