--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -2,6 +2,7 @@ $color-blue: #402DB3;
 $color-blue-darker: darken($color-blue, 20);
 $color-red: #F05050;
 $color-green: #1dd710;
+$color-black: #1c1c1c;
 $font-base: Roboto;
-$font-alt: Bangers;
+$font-alt: Albula, sans-serif;
 $base-font-size: clamp(14px, calc(11px + 0.35vw), 50px);
