--- a/app/scss/pages/_country-nerd.scss
+++ b/app/scss/pages/_country-nerd.scss
@@ -140,8 +140,9 @@
 		align-items: center;
 		cursor: pointer;
 
-		color: black;
+		color: $color-black;
 		font-size: 2rem;
+		font-weight: 900;
 		font-family: $font-alt;
 
 		box-shadow: 2px 2px 5px 4px rgba(0, 0, 0, 0.25);
@@ -176,7 +177,6 @@
 			font-family: $font-alt;
 			font-size: 2.5rem;
 			font-weight: 400;
-			letter-spacing: 0.04em;
 			white-space: nowrap;
 			line-height: 1.3em;
 		}
@@ -185,7 +185,9 @@
 			height: 2.5rem;
 			width: 2.5rem;
 			display: inline-flex;
-			transform: translate(0.1em, -0.2em);
+			transform: translate(0.1em, 0.1em);
+			text-transform: uppercase;
+			line-height: 1em;
 		}
 	}
 
@@ -216,7 +218,6 @@
 		outline: none;
 		border-radius: 1000px;
 		font-size: 2rem;
-		text-transform: uppercase;
 		height: 4rem;
 		width: 100%;
 		@media (min-width: 768px) {
@@ -240,7 +241,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 2rem;
+		gap: 0.6rem;
 		width: 100%;
 
 		.answer {
@@ -250,7 +251,7 @@
 			justify-content: flex-end;
 			align-items: center;
 			gap: 1rem;
-			padding: 0.5rem;
+			padding: 0.5rem 0 1rem 0;
 			border-bottom: 1px solid white;
 			width: 100%;
 			min-width: 15rem;
@@ -259,7 +260,7 @@
 				max-width: 25rem;
 			}
 			font-size: 1.5rem;
-			text-transform: uppercase;
+			text-transform: capitalize;
 
 			.flag {
 				transform: translateY(1px);
@@ -271,7 +272,7 @@
 					position: absolute;
 					height: 1.2em;
 					width: 1.2em;
-					top: 50%;
+					top: 40%;
 					right: 0;
 					transform: translateY(-50%);
 					background-image: url('/img/checkmark.svg');
