--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -9,8 +9,9 @@ header {
 		gap: 1rem;
 		height: 4rem;
 
+		font-family: $font-alt;
 		font-size: 1.4rem;
-		font-weight: 700;
+		font-weight: 900;
 		color: white;
 		text-decoration: none;
 
@@ -20,6 +21,11 @@ header {
 
 		img {
 			width: 1.7rem;
+		}
+
+		span {
+			display: block;
+			transform: translateY(-0.1em);
 		}
 	}
 
