--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -12,6 +12,8 @@ body {
 
 body {
 	background: $color-blue;
+	background: linear-gradient(4deg, rgb(14, 10, 103) 0%, rgb(36, 25, 119) 0%, rgba(64,43,187,1) 58%);
+	background-attachment: fixed;
 	font-family: $font-base;
 	color: white;
 	display: flex;
