--- a/app/scss/pages/_country-nerd.scss
+++ b/app/scss/pages/_country-nerd.scss
@@ -25,107 +25,107 @@
 		.letter {
 
 			&:nth-child(1) {
-				transition: opacity 0.2s ease 0.1s;
+				transition: opacity 0.2s ease 0.1s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(2) {
-				transition: opacity 0.2s ease 0.2s;
+				transition: opacity 0.2s ease 0.2s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(3) {
-				transition: opacity 0.2s ease 0.11s;
+				transition: opacity 0.2s ease 0.11s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(4) {
-				transition: opacity 0.2s ease 0.3s;
+				transition: opacity 0.2s ease 0.3s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(5) {
-				transition: opacity 0.2s ease 0.18s;
+				transition: opacity 0.2s ease 0.18s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(6) {
-				transition: opacity 0.2s ease 0.13s;
+				transition: opacity 0.2s ease 0.13s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(7) {
-				transition: opacity 0.2s ease 0.21s;
+				transition: opacity 0.2s ease 0.21s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(8) {
-				transition: opacity 0.2s ease 0.05s;
+				transition: opacity 0.2s ease 0.05s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(9) {
-				transition: opacity 0.2s ease 0.35s;
+				transition: opacity 0.2s ease 0.35s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(10) {
-				transition: opacity 0.2s ease 0.4s;
+				transition: opacity 0.2s ease 0.2s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(11) {
-				transition: opacity 0.2s ease 0.22s;
+				transition: opacity 0.2s ease 0.22s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(12) {
-				transition: opacity 0.2s ease 0.17s;
+				transition: opacity 0.2s ease 0.17s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(13) {
-				transition: opacity 0.2s ease 0.03s;
+				transition: opacity 0.2s ease 0.03s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(14) {
-				transition: opacity 0.2s ease 0.09s;
+				transition: opacity 0.2s ease 0.09s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(15) {
-				transition: opacity 0.2s ease 0.11s;
+				transition: opacity 0.2s ease 0.11s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(16) {
-				transition: opacity 0.2s ease 0.4s;
+				transition: opacity 0.2s ease 0.2s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(17) {
-				transition: opacity 0.2s ease 0.35s;
+				transition: opacity 0.2s ease 0.35s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(18) {
-				transition: opacity 0.2s ease 0.31s;
+				transition: opacity 0.2s ease 0.31s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(19) {
-				transition: opacity 0.2s ease 0.2s;
+				transition: opacity 0.2s ease 0.2s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(20) {
-				transition: opacity 0.2s ease 0.14s;
+				transition: opacity 0.2s ease 0.14s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(21) {
-				transition: opacity 0.2s ease 0.25s;
+				transition: opacity 0.2s ease 0.25s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(22) {
-				transition: opacity 0.2s ease 0.06s;
+				transition: opacity 0.2s ease 0.06s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(23) {
-				transition: opacity 0.2s ease 0.17s;
+				transition: opacity 0.2s ease 0.17s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(24) {
-				transition: opacity 0.2s ease 0.24s;
+				transition: opacity 0.2s ease 0.24s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(25) {
-				transition: opacity 0.2s ease 0.36s;
+				transition: opacity 0.2s ease 0.36s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 
 			&:nth-child(26) {
-				transition: opacity 0.2s ease 0.37s;
+				transition: opacity 0.2s ease 0.37s, transform 0.2s ease, box-shadow 0.2s ease;
 			}
 		}
 	}
@@ -147,7 +147,7 @@
 
 		box-shadow: 2px 2px 5px 4px rgba(0, 0, 0, 0.25);
 
-		transition: transform 0.2s ease, box-shadow 0.2s ease;
+		transition: transform 0.4s ease, box-shadow 0.4s ease;
 		will-change: transform;
 
 		&:hover {
@@ -185,7 +185,8 @@
 			height: 2.5rem;
 			width: 2.5rem;
 			display: inline-flex;
-			transform: translate(0.1em, 0.1em);
+			font-size: 1.5rem;
+			transform: translate(0.1em, -0.1em);
 			text-transform: uppercase;
 			line-height: 1em;
 		}
@@ -241,7 +242,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 0.6rem;
+		gap: 0.3rem;
 		width: 100%;
 
 		.answer {
@@ -251,7 +252,7 @@
 			justify-content: flex-end;
 			align-items: center;
 			gap: 1rem;
-			padding: 0.5rem 0 1rem 0;
+			padding-bottom: 0.4rem;
 			border-bottom: 1px solid white;
 			width: 100%;
 			min-width: 15rem;
@@ -259,7 +260,7 @@
 			@media (min-width: 768px) {
 				max-width: 25rem;
 			}
-			font-size: 1.5rem;
+			font-size: 1.2rem;
 			text-transform: capitalize;
 
 			.flag {
@@ -270,8 +271,8 @@
 				&::after {
 					content: "";
 					position: absolute;
-					height: 1.2em;
-					width: 1.2em;
+					height: 0.8em;
+					width: 0.8em;
 					top: 40%;
 					right: 0;
 					transform: translateY(-50%);
@@ -295,10 +296,13 @@
 	}
 
 	.won-link {
+
 		&:before {
+			background-color: $color-blue-darker;
 		}
 
 		&:after {
+			background-color: lighten($color-blue-darker, 5);
 			height: 60rem;
 			width: 60rem;
 		}
