Flag nerds + page de paramétrage

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -6,6 +6,7 @@
 @import "pages/home";
 @import "pages/country-nerd";
 @import "pages/flag-nerd";
+@import "pages/settings";
 
 @import "partials/buttons";
 @import "partials/flag";
