--- a/app/scss/_titles.scss
+++ b/app/scss/_titles.scss
@@ -5,6 +5,11 @@ h1 {
 	margin-bottom: 2em;
 	text-align: center;
 	line-height: 1.1em;
+
+
+	@media (max-width: 767px) {
+		font-size: 2rem;
+	}
 }
 
 h2 {
