--- a/app/scss/pages/_flag-nerd.scss
+++ b/app/scss/pages/_flag-nerd.scss
@@ -2,20 +2,92 @@
 	flex-direction: column;
 	align-items: center;
 
-	.flags-container {
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
-		gap: 1rem;
-		max-width: 90%;
+	h1 {
+		margin-bottom: 1rem;
+	}
 
-		@media (min-width: 768px) {
-			max-width: 45rem;
-		}
+	.flag-container {
+		margin-top: 1rem;
+		margin-bottom: 2rem;
 
 		.flag {
-			height: 3rem;
-			width: 5rem;
+			height: 10rem;
+			width: 15rem;
+		}
+	}
+
+	.answer-container {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 2rem;
+		margin-top: 1rem;
+
+		.country {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			background-color: white;
+			color: $color-blue-darker;
+			padding: 1rem 2rem;
+			border-radius: 1000px;
+			text-transform: uppercase;
+			font-size: 1.5rem;
+			cursor: pointer;
+			box-shadow: 0.5rem 0.5rem 3rem 1rem rgba(0, 0, 0, 0.19);
+			transition: transform 0.2s ease, background-color 0.2s ease;
+			will-change: transform;
+
+			&:hover {
+				transform: scale(1.02);
+			}
+		}
+
+		.valid {
+			background-color: $color-green;
+			color: white;
+			font-weight: 700;
+		}
+
+		.invalid {
+			background-color: $color-red;
+			color: white;
+		}
+	}
+
+	.progress-container {
+		display: flex;
+		gap: 1rem;
+	}
+
+	.progress,
+	.attempts {
+		background-color: $color-blue-darker;
+		color: white;
+		width: fit-content;
+		border-radius: 1000px;
+		padding: 0.8rem 1.2rem;
+		font-size: 0.7rem;
+		font-weight: 700;
+		text-transform: uppercase;
+		display: flex;
+		gap: 0.25rem;
+	}
+
+	.win {
+		display: none;
+
+		&.show {
+			display: flex;
+		}
+
+		flex-direction: column;
+		align-items: center;
+
+		font-size: 1.2rem;
+
+		.btn {
+			margin-top: 1rem;
 		}
 	}
 }
