--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,4 +1,5 @@
 $color-blue: #402DB3;
+$color-blue-medium: darken($color-blue, 10);
 $color-blue-darker: darken($color-blue, 20);
 $color-red: #F05050;
 $color-green: #1dd710;
