--- a/app/scss/_titles.scss
+++ b/app/scss/_titles.scss
@@ -2,6 +2,7 @@ h1 {
 	font-family: $font-alt;
 	font-size: 2.5rem;
 	font-weight: 700;
+	margin-top: 0;
 	margin-bottom: 2em;
 	text-align: center;
 	line-height: 1.1em;
