--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -11,66 +11,31 @@ header {
 		display: flex;
 		align-items: center;
 		gap: 1rem;
-		height: 4rem;
-
-		@media (max-width: 767px) {
-			height: 3rem;
-		}
+		text-transform: uppercase;
 
 		font-family: $font-alt;
-		font-size: 1.4rem;
+		font-size: 2rem;
+		line-height: 1em;
 		font-weight: 900;
 		color: white;
 		text-decoration: none;
 
-		border-radius: 1000px;
-		padding: 0 1.4rem;
-
-		box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0, 0, 0, 0.05);
-		overflow: hidden;
 		transition: transform 0.2s ease;
 		will-change: transform;
 
 		img {
 			width: 1.7rem;
+			transition: transform 0.2s ease;
+			transform: translateY(0.15rem);
 		}
 
 		span {
 			display: block;
 		}
 
-		&::before {
-			content: '';
-			position: absolute;
-			height: 100%;
-			width: 100%;
-			top: 0;
-			left: 0;
-			background-color: $color-blue-darker;
-			border-radius: 1000px;
-			z-index: -1;
-		}
-
-		&::after {
-			content: '';
-			position: absolute;
-			height: 30rem;
-			width: 30rem;
-			top: 50%;
-			left: 1%;
-			transform: translate(-50%, -50%) scale(0);
-			background-color: lighten($color-blue-darker, 5);
-			border-radius: 50%;
-			z-index: -1;
-			transition: transform 0.2s ease;
-			will-change: transform;
-		}
-
 		&:hover {
-			transform: scale(1.05);
-
-			&::after {
-				transform: translate(-50%, -50%) scale(1);
+			img {
+				transform: translateY(0.15rem) scale(1.2);
 			}
 		}
 	}
@@ -78,7 +43,7 @@ header {
 	.menu {
 		height: 4rem;
 		width: 4rem;
-		background-color: $color-blue-darker;
+		background-color: $color-blue-medium;
 		border-radius: 50%;
 		position: relative;
 		cursor: pointer;
