--- a/app/scss/pages/_flag-nerd.scss
+++ b/app/scss/pages/_flag-nerd.scss
@@ -19,8 +19,12 @@
 	.answer-container {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		gap: 2rem;
+		gap: 1rem;
 		margin-top: 1rem;
+
+		@media (min-width: 768px) {
+			gap: 2rem;
+		}
 
 		.country {
 			display: flex;
@@ -29,14 +33,17 @@
 			text-align: center;
 			background-color: white;
 			color: $color-blue-darker;
-			padding: 1rem 2rem;
+			padding: 0.5rem 1rem;
 			border-radius: 1000px;
-			text-transform: uppercase;
-			font-size: 1.5rem;
+			font-size: 1.2rem;
 			cursor: pointer;
 			box-shadow: 0.5rem 0.5rem 3rem 1rem rgba(0, 0, 0, 0.19);
 			transition: transform 0.2s ease, background-color 0.2s ease;
 			will-change: transform;
+
+			@media (min-width: 768px) {
+				padding: 1rem 2rem;
+			}
 
 			&:hover {
 				transform: scale(1.02);
@@ -57,9 +64,15 @@
 
 	.progress-container {
 		display: flex;
+		flex-direction: column;
 		align-items: center;
 		gap: 1rem;
 		margin: 1rem 0;
+
+		@media (min-width: 768px) {
+			flex-direction: row;
+		}
+
 	}
 
 	.progress {
