--- a/app/scss/pages/_flag-nerd.scss
+++ b/app/scss/pages/_flag-nerd.scss
@@ -131,6 +131,7 @@
 		flex-direction: column;
 		align-items: center;
 		font-size: 1.2rem;
+		text-align: center;
 
 		.btn {
 			margin-top: 1rem;
@@ -147,6 +148,7 @@
 		max-width: 90%;
 		text-transform: uppercase;
 		font-weight: 700;
+		text-align: center;
 
 		&.show {
 			display: flex;
