--- a/app/scss/pages/_flag-nerd.scss
+++ b/app/scss/pages/_flag-nerd.scss
@@ -9,10 +9,12 @@
 	.flag-container {
 		margin-top: 1rem;
 		margin-bottom: 2rem;
+		height: 10rem;
+		width: 15rem;
 
-		.flag {
-			height: 10rem;
-			width: 15rem;
+		img {
+			height: 100%;
+			width: 100%;
 		}
 	}
 
@@ -131,10 +133,29 @@
 		flex-direction: column;
 		align-items: center;
 		font-size: 1.2rem;
-		text-align: center;
+		text-transform: uppercase;
+		font-weight: 700;
+		text-align: left;
+
+		p {
+			display: flex;
+			align-items: center;
+		}
+
+		.bigger {
+			font-size: 2em;
+			margin-right: 1rem;
+		}
 
 		.btn {
 			margin-top: 1rem;
+		}
+
+
+		@media (max-width: 767px) {
+			br {
+				display: none;
+			}
 		}
 	}
 
