--- a/app/scss/pages/_flag-nerd-hard.scss
+++ b/app/scss/pages/_flag-nerd-hard.scss
@@ -12,9 +12,13 @@
 		height: 10rem;
 		width: 15rem;
 
-		img {
+		.flag {
 			height: 100%;
 			width: 100%;
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+			border: none;
 		}
 	}
 
