--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -2,6 +2,14 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
+	h1 {
+		margin-bottom: 0;
+	}
+
+	.h1-subtitle {
+		margin-bottom: 3rem;
+	}
 }
 
 .game-cards {
