--- a/app/scss/_titles.scss
+++ b/app/scss/_titles.scss
@@ -5,11 +5,11 @@ h1 {
 	margin-top: 0;
 	margin-bottom: 2em;
 	text-align: center;
-	line-height: 1.1em;
-
+	line-height: 1.2em;
 
 	@media (max-width: 767px) {
-		font-size: 2rem;
+		font-size: 1.7rem;
+		margin-top: 1rem;
 	}
 }
 
@@ -17,5 +17,9 @@ h2 {
 	font-family: $font-alt;
 	font-size: 1.8rem;
 	font-weight: 700;
-	line-height: 1.1em;
+	line-height: 1.2em;
+
+	@media (max-width: 767px) {
+		font-size: 1.5rem;
+	}
 }
