--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -5,6 +5,7 @@
 
 	h1 {
 		text-align: center;
+		font-size: 3rem;
 
 		small {
 			display: block;
@@ -26,5 +27,5 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	gap: 2rem;
+	gap: 1rem;
 }
