--- a/app/scss/partials/_buttons.scss
+++ b/app/scss/partials/_buttons.scss
@@ -2,11 +2,11 @@
 	position: relative;
 	display: block;
 
-	padding: 1.2rem 3rem 1.5rem 3rem;
+	padding: 1rem 2.5rem;
 	width: fit-content;
 	min-width: 6rem;
 
-	color: white;
+	color: $color-blue-darker;
 
 	border-radius: 1000px;
 
@@ -28,31 +28,13 @@
 		width: 100%;
 		top: 0;
 		left: 0;
-		background-color: $color-red;
+		background-color: white;
 		border-radius: 1000px;
 		z-index: -1;
 	}
 
-	&::after {
-		content: '';
-		position: absolute;
-		height: 30rem;
-		width: 30rem;
-		top: 50%;
-		left: 1%;
-		transform: translate(-50%, -50%) scale(0);
-		background-color: darken($color-red, 5);
-		border-radius: 50%;
-		z-index: -1;
-		transition: transform 0.2s ease;
-		will-change: transform;
-	}
-
 	&:hover {
 		transform: scale(1.05);
-		&::after {
-			transform: translate(-50%, -50%) scale(1);
-		}
 	}
 
 	&:active{
