grouped classic/hard mode in one game card (s/o to scamander)

--- a/app/scss/pages/_settings.scss
+++ b/app/scss/pages/_settings.scss
@@ -1,6 +1,7 @@
 .page.settings {
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 2rem;
 
 	h1 {
 		margin-bottom: 1rem;
@@ -16,6 +17,8 @@
 	}
 
 	.btn {
+		width: 100%;
+
 		&.done {
 			&::before,
 			&::after {
