--- a/app/scss/pages/_flag-nerd-hard.scss
+++ b/app/scss/pages/_flag-nerd-hard.scss
@@ -56,6 +56,9 @@
 		font-size: 1.8rem;
 		font-weight: 700;
 		cursor: pointer;
+		outline: none;
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
 		@media (max-width: 767px) {
 			height: 3rem;
 			width: 6rem;
