--- a/app/scss/partials/_buttons.scss
+++ b/app/scss/partials/_buttons.scss
@@ -21,6 +21,9 @@
 
 	cursor: pointer;
 
+	outline: none;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
 	&::before {
 		content: '';
 		position: absolute;
