fix layout shift between to flag

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -4,6 +4,7 @@
 @import "titles";
 
 @import "pages/home";
+@import "pages/capital-nerd-classic";
 @import "pages/country-nerd";
 @import "pages/flag-nerd-classic";
 @import "pages/flag-nerd-hard";
