improve pagespeed grade

--- a/app/scss/partials/_game-card.scss
+++ b/app/scss/partials/_game-card.scss
@@ -55,7 +55,7 @@
 	&.flag-nerd {
 		.background {
 			&::before {
-				background-image: url('/img/cards/flag-nerd.jpg');
+				background-image: url('/img/cards/flag-nerd.webp');
 			}
 		}
 	}
@@ -64,7 +64,7 @@
 	&.capital-nerd {
 		.background {
 			&::before {
-				background-image: url('/img/cards/capital-nerd.jpg');
+				background-image: url('/img/cards/capital-nerd.webp');
 			}
 		}
 	}
@@ -72,7 +72,7 @@
 	&.country-nerd {
 		.background {
 			&::before {
-				background-image: url('/img/cards/country-nerd.jpg');
+				background-image: url('/img/cards/country-nerd.webp');
 			}
 
 			&::after {
