--- a/app/scss/pages/_flag-nerd-classic.scss
+++ b/app/scss/pages/_flag-nerd-classic.scss
@@ -47,9 +47,11 @@
 			justify-content: center;
 			align-items: center;
 			text-align: center;
+			align-self: center;
+			height: fit-content;
 			background-color: white;
 			color: $color-blue-darker;
-			padding: 0.5rem 1rem;
+			padding: 1rem;
 			border-radius: 1000px;
 			font-size: 1.2rem;
 			cursor: pointer;
