new game (wip) : map nerd

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -8,6 +8,7 @@
 @import "pages/country-nerd";
 @import "pages/flag-nerd-classic";
 @import "pages/flag-nerd-hard";
+@import "pages/map-nerd-classic";
 @import "pages/settings";
 
 @import "partials/buttons";
@@ -16,4 +17,5 @@
 @import "partials/game-card";
 @import "partials/header";
 @import "partials/icon";
+@import "partials/win-loose-messages";
 
